--- a/src/components/NotesList/NotesList-styles.css
+++ b/src/components/NotesList/NotesList-styles.css
@@ -3,3 +3,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.notesListPageContainer{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
